--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Book List</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                 <label for="year">Year</label>
             </div>
             <div class="d-grid gap-2">
-                <button class="btn btn-danger fw-bold" type="button">Button</button>
+                <button class="btn btn-danger fw-bold" type="button">Add list</button>
             </div>
         </form>
 
