--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <label for="year">Year</label>
             </div>
             <div class="d-grid gap-2">
-                <button class="btn btn-danger fw-bold" type="button">Add list</button>
+                <button class="btn btn-danger fw-bold" type="button">Add To List</button>
             </div>
         </form>
 
